fix(): adds bottom spacing on the page

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --padding-sm: 1rem;
     --padding-md: 1.5rem;
     --padding-lg: 2rem;
+    --padding-xl: 4rem;
 }
 
 * {
@@ -41,6 +42,7 @@ p {
     width: 100%;
     min-height: 100%;
     padding: var(--padding-sm);
+    padding-bottom: var(--padding-xl);
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
